OPENNLP-1477 Modernize ExtensionLoader to avoid deprecated Class API (#513)